--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,26 @@
 body{
-    background-color: rebeccapurple;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    font-family: Arial, Helvetica, sans-serif;
+}
+header{
+    display: flex;
+    justify-content:space-between;
+}
+nav{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.header-btn{
+    font-size: 30px;
+    color: #E98A71;
+    font-weight: bold;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    
+}button:hover{
+    text-decoration: underline;
 }
